@@ -194,7 +194,6 @@ int CmdShow::execute (std::string& output)
     " urgency.annotations.coefficient"
     " urgency.blocked.coefficient"
     " urgency.blocking.coefficient"
-    " urgency.inherit.coefficient"
     " urgency.due.coefficient"
     " urgency.next.coefficient"
     " urgency.project.coefficient"
@@ -202,6 +201,7 @@ int CmdShow::execute (std::string& output)
     " urgency.waiting.coefficient"
     " urgency.age.coefficient"
     " urgency.age.max"
+    " urgency.inherit"
     " verbose"
     " weekstart"
     " xterm.title"
